проект 7 исправления